<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nallihan_kus_cenneti"
    tools:context=".KusuYakala">

    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginStart="14dp"
        app:layout_constraintBottom_toTopOf="@+id/textBestScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTime"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="127dp"
            android:layout_height="137dp"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="increaseScore"
            app:srcCompat="@drawable/kus" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="127dp"
            android:layout_height="137dp"
            android:layout_column="1"
            android:layout_row="0"
            android:onClick="increaseScore"
            app:srcCompat="@drawable/kus" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="127dp"
            android:layout_height="137dp"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="increaseScore"
            app:srcCompat="@drawable/kus" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="127dp"
            android:layout_height="137dp"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="increaseScore"
            app:srcCompat="@drawable/kus" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="127dp"
            android:layout_height="137dp"
            android:layout_column="1"
            android:layout_row="1"
            android:onClick="increaseScore"
            app:srcCompat="@drawable/kus" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="127dp"
            android:layout_height="137dp"
            android:layout_column="2"
            android:layout_row="1"
            android:onClick="increaseScore"
            app:srcCompat="@drawable/kus" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="127dp"
            android:layout_height="137dp"
            android:layout_column="0"
            android:layout_row="2"
            android:onClick="increaseScore"
            app:srcCompat="@drawable/kus" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="127dp"
            android:layout_height="137dp"
            android:layout_column="1"
            android:layout_row="2"
            android:onClick="increaseScore"
            app:srcCompat="@drawable/kus" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="127dp"
            android:layout_height="137dp"
            android:layout_column="2"
            android:layout_row="2"
            android:onClick="increaseScore"
            app:srcCompat="@drawable/kus" />

    </GridLayout>

    <TextView
        android:id="@+id/textTime"
        android:layout_width="307dp"
        android:layout_height="47dp"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/kalan_süre"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/puanın"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/textBestScore" />

    <Button
        android:id="@+id/button2"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="tekrar_dene"
        android:text="@string/tekrar_dene"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textScore"
        app:layout_constraintEnd_toEndOf="@+id/gridLayout2"
        app:layout_constraintTop_toTopOf="@+id/textScore"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="73dp"
        android:layout_height="41dp"
        android:background="@android:color/holo_blue_bright"
        android:onClick="ana_menu"
        android:text="@string/ana_menü"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/textScore"
        app:layout_constraintStart_toStartOf="@+id/gridLayout2"
        app:layout_constraintTop_toTopOf="@+id/textScore" />

    <TextView
        android:id="@+id/textBestScore"
        android:layout_width="215dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/en_yüksek_puan"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textScore"
        app:layout_constraintEnd_toEndOf="@+id/textScore"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/textScore"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>